add:total feedback and visit requests associated with specified property
